--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.8",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "next-seo": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
