--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
     "@stitches/react": "^1.2.8",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "dayjs": "^1.11.8",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
