--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@stitches/react": "^1.2.8",
     "@types/node": "20.2.5",
@@ -24,13 +28,16 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@rocketseat/eslint-config": "^1.2.0",
+    "@types/uuid": "^9.0.2",
     "husky": "^8.0.0",
-    "lint-staged": "^13.2.2"
+    "lint-staged": "^13.2.2",
+    "prisma": "^4.15.0"
   }
 }
