feat(explorePage): update env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # Prisma
 DATABASE_URL="file:./dev.db"
 
-APP_DOMAIN=
+APP_DOMAIN=https://luiz504-bookwise.vercel.app
+
+BASE_URL=http://localhost:3000/
