--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@stitches/react": "^1.2.8",
+    "@tanstack/react-query": "^4.29.12",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
-    "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "next-seo": "^6.0.0",
@@ -30,13 +30,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@rocketseat/eslint-config": "^1.2.0",
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/uuid": "^9.0.2",
+    "eslint": "^8.42.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
     "prisma": "^4.15.0"
