--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,11 @@ DATABASE_URL="file:./dev.db"
 APP_DOMAIN=https://luiz504-bookwise.vercel.app
 
 BASE_URL=http://localhost:3000/
+
+
+# OAUTH 
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+NEXTAUTH_SECRET=
