--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.0",
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@stitches/react": "^1.2.8",
@@ -26,6 +27,7 @@
     "dayjs": "^1.11.8",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "next-seo": "^6.0.0",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
