--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
+    "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@stitches/react": "^1.2.8",
@@ -32,6 +33,7 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.0",
     "typescript": "5.1.3",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
@@ -45,6 +47,7 @@
     "eslint": "^8.42.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
+    "next-react-svg": "^1.2.0",
     "prisma": "^4.15.0"
   }
 }
