--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@stitches/react": "^1.2.8",
     "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.29.15",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
