feat(profilePage): incremente api getUser with the user Activity meta data

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
-# Prisma
-DATABASE_URL="file:./dev.db"
 
+#SEO
 APP_DOMAIN=https://luiz504-bookwise.vercel.app
 
-BASE_URL=http://localhost:3000/
-
+# Prisma
+DATABASE_URL="file:./dev.db"
 
 # OAUTH 
 GITHUB_CLIENT_ID=
