style: reponsive-revision

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "06-challenge-bookwise",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "dev-inspect": "NODE_OPTIONS='--inspect' next dev",
